assignment 2 with extra features

--- a/module2-regression-2/Cai_Nowicki_assignment_regression_classification_2.ipynb
+++ b/module2-regression-2/Cai_Nowicki_assignment_regression_classification_2.ipynb
@@ -1828,7 +1828,7 @@
         "  y_pred = model.predict(X_test)\n",
         "  mae_test = mean_absolute_error(y_test, y_pred)\n",
         "  print(f'Test Error: {mae_test}')\n",
-        "  print('R^2 value ')"
+        "  print('R^2 value on test data:', model.score(X_test, y_test))"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1840,21 +1840,23 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 68
+          "height": 102
         },
-        "outputId": "78784d15-9926-480e-afdf-9a5db65e94b0"
+        "outputId": "c16a97d0-0756-47aa-9c7e-6fbc9795cce5"
       },
       "source": [
         "regression(train, test, ['bedrooms', 'bathrooms', 'interest_level'], 'price')"
       ],
-      "execution_count": 113,
+      "execution_count": 116,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Linear Regression dependent on: ['bedrooms', 'bathrooms', 'interest_level'], predicting price\n",
             "Train Error: 791.8267165930765\n",
-            "Test Error: 792.6617034799692\n"
+            "R^2 value on training data: 0.5403277932326123\n",
+            "Test Error: 792.6617034799692\n",
+            "R^2 value on test data: 0.5537862677958163\n"
           ],
           "name": "stdout"
         }
@@ -1867,21 +1869,23 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 68
+          "height": 102
         },
-        "outputId": "1146fb9a-9e54-420e-dab4-a37a3f754d57"
+        "outputId": "d05f8ac1-c183-4204-a499-97a1e01b4af4"
       },
       "source": [
         "regression(train, test, ['bedrooms', 'bathrooms'], 'price')"
       ],
-      "execution_count": 114,
+      "execution_count": 117,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Linear Regression dependent on: ['bedrooms', 'bathrooms'], predicting price\n",
             "Train Error: 818.5310213271714\n",
-            "Test Error: 825.8987822403527\n"
+            "R^2 value on training data: 0.5111543084316605\n",
+            "Test Error: 825.8987822403527\n",
+            "R^2 value on test data: 0.5213303957090346\n"
           ],
           "name": "stdout"
         }
@@ -1891,6 +1895,64 @@
       "cell_type": "code",
       "metadata": {
         "id": "0Gh25ynGawHV",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 102
+        },
+        "outputId": "18b62d42-141f-454e-abcc-2119b28a5bae"
+      },
+      "source": [
+        "regression(train, test, ['bedrooms', 'bathrooms', 'elevator', 'pets_allowed'], 'price')"
+      ],
+      "execution_count": 118,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Linear Regression dependent on: ['bedrooms', 'bathrooms', 'elevator', 'pets_allowed'], predicting price\n",
+            "Train Error: 791.0547045751715\n",
+            "R^2 value on training data: 0.5314808324706244\n",
+            "Test Error: 798.8568459132107\n",
+            "R^2 value on test data: 0.5401880232409575\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZnHaFlyib2OM",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 102
+        },
+        "outputId": "66215212-11f5-455f-ec84-38fe2ad51b53"
+      },
+      "source": [
+        "regression(train, test, ['bedrooms', 'bathrooms', 'elevator', 'pets_allowed', 'laundry_available'], 'price')"
+      ],
+      "execution_count": 119,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Linear Regression dependent on: ['bedrooms', 'bathrooms', 'elevator', 'pets_allowed', 'laundry_available'], predicting price\n",
+            "Train Error: 786.1682546891418\n",
+            "R^2 value on training data: 0.5381167142071307\n",
+            "Test Error: 794.7548542908727\n",
+            "R^2 value on test data: 0.5438645565265686\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bc7Fiz7rcB7k",
         "colab_type": "code",
         "colab": {}
       },
