--- a/module3-ridge-regression/LS_DS_213.ipynb
+++ b/module3-ridge-regression/LS_DS_213.ipynb
@@ -18,8 +18,8 @@
     "# Ridge Regression\n",
     "- Do one-hot encoding of categorical features\n",
     "- Do univariate feature selection\n",
-    "- Express and explain the intuition and interpretation of Ridge Regression\n",
-    "- Use sklearn.linear_model.Ridge to fit and interpret Ridge Regression models"
+    "- Use sklearn.linear_model.Ridge to fit and interpret Ridge Regression models\n",
+    "- Express and explain the intuition and interpretation of Ridge Regression"
    ]
   },
   {
@@ -122,7 +122,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -136,7 +138,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -150,7 +154,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -207,7 +213,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -221,7 +229,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -238,7 +248,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -252,7 +264,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -420,7 +434,41 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO: Select the 15 features that best correlate with the target\n",
+    "# (15 is an arbitrary starting point here)\n",
+    "\n",
+    "# SelectKBest has a similar API to what we've seen before.\n",
+    "# IMPORTANT!\n",
+    "# .fit_transform on the train set\n",
+    "# .transform on test set\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Which features were selected?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: How many features should be selected?\n",
+    "\n",
+    "# You can try a range of values for k,\n",
+    "# then choose the model with the best score.\n",
+    "# If multiple models \"tie\" for the best score,\n",
+    "# choose the simplest model.\n",
+    "# You decide what counts as a tie!\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -631,7 +679,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Express and explain the intuition and interpretation of Ridge Regression"
+    "# Use sklearn.linear_model.Ridge to fit and interpret Ridge Regression models"
    ]
   },
   {
@@ -701,6 +749,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Express and explain the intuition and interpretation of Ridge Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Okay, now let's back up — _way_ up!\n",
     "\n",
     "Data science depends on math, and math is generally focused on situations where:\n",
@@ -734,8 +789,129 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Follow Along\n",
+    "> chaotic system is a system\n",
+    "where small changes result in\n",
+    "unpredictable things so the canonical\n",
+    "example is the weather right a butterfly\n",
+    "flaps its wings in Thailand and then\n",
+    "there's a hurricane off the coast of\n",
+    "North Carolina at seven months or\n",
+    "something so that's a little bit of a\n",
+    "romanticization of it but the general\n",
+    "idea is is there's a reason that we only\n",
+    "have good forecasts for a few days\n",
     "\n",
+    "\n",
+    "> if we're violating\n",
+    "this third assumption it's kind of like\n",
+    "well we're not generalizing you know we\n",
+    "can't predict future we can't predict\n",
+    "new cases because we're overfitting on\n",
+    "the current situation and it changes in\n",
+    "ways that we're not dealing with so the\n",
+    "point is is if you have any of these you\n",
+    "have an ill-posed problem\n",
+    "\n",
+    "\n",
+    "> in the no solution case these\n",
+    "lines would be parallel \n",
+    "\n",
+    "\n",
+    "> how might it look for\n",
+    "case two\n",
+    "yeah perhaps you put the red line\n",
+    "exactly on the blue line right then\n",
+    "everything is a solution to both of them\n",
+    "and that's kind of silly now in this\n",
+    "case because these are both linear\n",
+    "anything other than perfect intersection\n",
+    "is just gonna give us either parallel\n",
+    "lines or one intersection but if these\n",
+    "were quadratic if we added some squared\n",
+    "terms in here right some other Wiggles\n",
+    "then it's possible that they could\n",
+    "intercept in multiple places so that's\n",
+    "another way to just if we change the\n",
+    "equations to be higher dimension they\n",
+    "might intersect in multiple places and\n",
+    "now there's more than one solution \n",
+    "\n",
+    "> for the third one, I guess the picture\n",
+    "would be that these aren't actually\n",
+    "functions right that these are\n",
+    "discontinuous that perhaps there's steps\n",
+    "and jumps in these values perhaps this\n",
+    "single point is omitted right like the\n",
+    "red line goes here and then if the red\n",
+    "line just doesn't exist for a while and\n",
+    "then the red line exists again up here\n",
+    "we change it to be a piecewise function\n",
+    "so that could be a situation where it's\n",
+    "more like three all right\n",
+    "\n",
+    "\n",
+    "> overfitting is a special case of not\n",
+    "generalizing and having this chaotic system\n",
+    "\n",
+    "> so does anybody have ideas for how we\n",
+    "can address overfitting we've already\n",
+    "talked about a few so feel free to\n",
+    "discuss them\n",
+    "\n",
+    "> you could use PCA but to be\n",
+    "clear PCA won't give you nice human\n",
+    "features at the end PCA will give you\n",
+    "this components yeah use fewer features\n",
+    "remove collinear features now look at\n",
+    "this matrix here or just you know beep\n",
+    "be picky about the features you use but\n",
+    "wouldn't it be nice if there is a way\n",
+    "just say hey I kind of want to throw all\n",
+    "the features out it anyway\n",
+    "and then let the model training figure\n",
+    "out how much how hard it should train I\n",
+    "want the model training I don't want to\n",
+    "have to manually find this spot here I\n",
+    "don't want to have to look and say oh I\n",
+    "need this feature but not that feature\n",
+    "blah blah blah I should only engineer\n",
+    "this I want to just train a model and I\n",
+    "wanted to find this happy middle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What can we do?\n",
+    "\n",
+    "- Use fewer features - sure, but it can be a lot of work to figure out *which* features, and (in cases like this) there may not be any good reason to really favor some features over another.\n",
+    "- Get more data! This is actually a pretty good approach in tech, since apps generate lots of data all the time (and we made this situation by artificially constraining our data). But for case studies, existing data, etc. it won't work.\n",
+    "- **Regularize!**\n",
+    "\n",
+    "### Regularization just means \"add bias\"\n",
+    "\n",
+    "OK, there's a bit more to it than that. But that's the core intuition - the problem is the model working \"too well\", so fix it by making it harder for the model!\n",
+    "\n",
+    "It may sound strange - a technique that is purposefully \"worse\" - but in certain situations, it can really get results.\n",
+    "\n",
+    "What's bias? In the context of statistics and machine learning, bias is when a predictive model fails to identify relationships between features and the output. In a word, bias is *underfitting*.\n",
+    "\n",
+    "We want to add bias to the model because of the [bias-variance tradeoff](https://en.wikipedia.org/wiki/Bias%E2%80%93variance_tradeoff) - variance is the sensitivity of a model to the random noise in its training data (i.e. *overfitting*), and bias and variance are naturally (inversely) related. Increasing one will always decrease the other, with regards to the overall generalization error (predictive accuracy on unseen data).\n",
+    "\n",
+    "Visually, the result looks like this:\n",
+    "\n",
+    "![Regularization example plot](https://upload.wikimedia.org/wikipedia/commons/0/02/Regularization.svg)\n",
+    "\n",
+    "The blue line is overfit, using more dimensions than are needed to explain the data and so much of the movement is based on noise and won't generalize well. The green line still fits the data, but is less susceptible to the noise - depending on how exactly we parameterize \"noise\" we may throw out actual correlation, but if we balance it right we keep that signal and greatly improve generalizability.\n",
+    "\n",
+    "### Look carefully at the above plot and think of ways you can quantify the difference between the blue and green lines..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Let's examine in the context of another famous housing dataset."
    ]
   },
@@ -766,33 +942,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "outputs": [],
-   "source": [
-    "# Let's try good old least squares!\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "\n",
-    "X = df.drop('Price', axis='columns')\n",
-    "y = df.Price\n",
-    "\n",
-    "lin_reg = LinearRegression().fit(X, y)\n",
-    "mean_squared_error(y, lin_reg.predict(X))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "That seems like a pretty good score, but...\n",
-    "\n",
-    "![Kitchen Sink](https://i.imgur.com/ZZxqhT1.jpg)\n",
-    "\n",
-    "Chances are this doesn't generalize very well. You can verify this by splitting the data to properly test model validity.\n"
+    "Split the data to properly test model validity"
    ]
   },
   {
@@ -805,90 +958,9 @@
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=43)\n",
-    "lin_reg_split = LinearRegression().fit(X_train, y_train)\n",
-    "print(mean_squared_error(y, lin_reg_split.predict(X)))\n",
-    "print(mean_squared_error(y_test, lin_reg_split.predict(X_test)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Oops! 💥\n",
-    "\n",
-    "### What can we do?\n",
-    "\n",
-    "- Use fewer features - sure, but it can be a lot of work to figure out *which* features, and (in cases like this) there may not be any good reason to really favor some features over another.\n",
-    "- Get more data! This is actually a pretty good approach in tech, since apps generate lots of data all the time (and we made this situation by artificially constraining our data). But for case studies, existing data, etc. it won't work.\n",
-    "- **Regularize!**\n",
-    "\n",
-    "### Regularization just means \"add bias\"\n",
-    "\n",
-    "OK, there's a bit more to it than that. But that's the core intuition - the problem is the model working \"too well\", so fix it by making it harder for the model!\n",
-    "\n",
-    "It may sound strange - a technique that is purposefully \"worse\" - but in certain situations, it can really get results.\n",
-    "\n",
-    "What's bias? In the context of statistics and machine learning, bias is when a predictive model fails to identify relationships between features and the output. In a word, bias is *underfitting*.\n",
-    "\n",
-    "We want to add bias to the model because of the [bias-variance tradeoff](https://en.wikipedia.org/wiki/Bias%E2%80%93variance_tradeoff) - variance is the sensitivity of a model to the random noise in its training data (i.e. *overfitting*), and bias and variance are naturally (inversely) related. Increasing one will always decrease the other, with regards to the overall generalization error (predictive accuracy on unseen data).\n",
-    "\n",
-    "Visually, the result looks like this:\n",
-    "\n",
-    "![Regularization example plot](https://upload.wikimedia.org/wikipedia/commons/0/02/Regularization.svg)\n",
-    "\n",
-    "The blue line is overfit, using more dimensions than are needed to explain the data and so much of the movement is based on noise and won't generalize well. The green line still fits the data, but is less susceptible to the noise - depending on how exactly we parameterize \"noise\" we may throw out actual correlation, but if we balance it right we keep that signal and greatly improve generalizability.\n",
-    "\n",
-    "### Look carefully at the above plot and think of ways you can quantify the difference between the blue and green lines..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Use sklearn.linear_model.Ridge to fit and interpret Ridge Regression models"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Overview\n",
-    "\n",
-    "We'll use scikit-learn's implementation of Ridge Regression."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Follow Along"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Now with regularization via ridge regression\n",
-    "from sklearn.linear_model import Ridge\n",
-    "\n",
-    "ridge_reg = Ridge().fit(X, y)\n",
-    "mean_squared_error(y, ridge_reg.predict(X))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# The score is a bit worse than OLS - but that's expected (we're adding bias)\n",
-    "# Let's try split\n",
-    "\n",
-    "ridge_reg_split = Ridge().fit(X_train, y_train)\n",
-    "mean_squared_error(y_test, ridge_reg_split.predict(X_test))"
+    "X = df.drop(columns='Price')\n",
+    "y = df.Price\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=43)"
    ]
   },
   {
@@ -901,6 +973,7 @@
    "source": [
     "# A little better (to same test split w/OLS) - can we improve it further?\n",
     "# We just went with defaults, but as always there's plenty of parameters\n",
+    "from sklearn.linear_model import Ridge\n",
     "help(Ridge)"
    ]
   },
@@ -919,6 +992,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
     "alphas = []\n",
     "mses = []\n",
     "\n",
