Update module 3 lesson notebook

--- a/module3-ridge-regression/LS_DS_213.ipynb
+++ b/module3-ridge-regression/LS_DS_213.ipynb
@@ -964,6 +964,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What are the parameters for scikit-learn's implementation of Ridge Regression?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -971,8 +978,6 @@
    },
    "outputs": [],
    "source": [
-    "# A little better (to same test split w/OLS) - can we improve it further?\n",
-    "# We just went with defaults, but as always there's plenty of parameters\n",
     "from sklearn.linear_model import Ridge\n",
     "help(Ridge)"
    ]
@@ -1110,7 +1115,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {
     "lines_to_next_cell": 2
    },
