assignment plus comparison to linear regression model

--- a/module3-ridge-regression/Cai_Nowicki_assignment_regression_classification_3.ipynb
+++ b/module3-ridge-regression/Cai_Nowicki_assignment_regression_classification_3.ipynb
@@ -1787,7 +1787,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 187
         },
-        "outputId": "5e51ad4b-fc4e-4611-ddd5-70675a5ec3cf"
+        "outputId": "40c08997-f2e0-4c94-f134-13e52050ea47"
       },
       "source": [
         "from sklearn.linear_model import LinearRegression\n",
@@ -1797,7 +1797,7 @@
         "X_test_selected = selector.transform(X_test)\n",
         "\n"
       ],
-      "execution_count": 121,
+      "execution_count": 175,
       "outputs": [
         {
           "output_type": "stream",
@@ -1842,7 +1842,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 867
         },
-        "outputId": "7ae9928f-a56c-4808-9a1c-3b5984ce9d1d"
+        "outputId": "d2290614-3a01-45e9-b482-25455692d8a3"
       },
       "source": [
         "print('Features Selected:')\n",
@@ -1854,7 +1854,7 @@
         "for name in unselected_names:\n",
         "  print(name)"
       ],
-      "execution_count": 123,
+      "execution_count": 178,
       "outputs": [
         {
           "output_type": "stream",
@@ -1944,21 +1944,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JnbLooRBxgoP",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "scaler = StandardScaler()\n",
-        "X_train_scaled = scaler.fit_transform(X_train)\n",
-        "X_test_scaled = scaler.transform(X_test)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "iNg-XACYx_C6",
         "colab_type": "code",
         "colab": {}
@@ -1978,17 +1963,22 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "eb914a74-e301-4b45-c5ab-ddb94efaba34"
+        "outputId": "9c604080-b817-48fd-b8b4-d7ee6fcfd1df"
       },
       "source": [
         "for alpha in [10**1, 10**2, 10**3, 10**4, 10**5, 10**6]:    \n",
-        "    # Fit ridge regression model\n",
+        "    #scale the data\n",
+        "    scaler = StandardScaler()\n",
+        "    X_train_scaled = scaler.fit_transform(X_train)\n",
+        "    X_test_scaled = scaler.transform(X_test)\n",
+        "\n",
+        "    # fit ridge regression model\n",
         "    display(HTML(f'Ridge Regression, with alpha={alpha}'))\n",
         "    model = Ridge(alpha=alpha)\n",
         "    model.fit(X_train_scaled, y_train)\n",
         "    y_pred = model.predict(X_test_scaled)\n",
         "\n",
-        "    # Get test error\n",
+        "    # get test error\n",
         "    mae = mean_absolute_error(y_test, y_pred)\n",
         "    display(HTML(f'Test Mean Absolute Error: ${mae:,.0f}'))\n",
         "    \n",
@@ -1999,7 +1989,7 @@
         "    plt.xlim(-400,700)\n",
         "    plt.show()"
       ],
-      "execution_count": 128,
+      "execution_count": 181,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2242,6 +2232,101 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SNL0VG450FUS",
+        "colab_type": "text"
+      },
+      "source": [
+        "###Linear regression comparison"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hxjXBN6F0ILo",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.linear_model import LinearRegression"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8mlK5kh00Knk",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model = LinearRegression()\n",
+        "model.fit(X_train_selected, y_train)\n",
+        "y_pred = model.predict(X_test_selected)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "B9zqhG340qHH",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "mae = mean_absolute_error(y_test, y_pred)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JzpEefyj0sQ3",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        },
+        "outputId": "c65c2c7f-da78-46d8-d238-998c25cc9e52"
+      },
+      "source": [
+        "print(selected_names, mae)"
+      ],
+      "execution_count": 185,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Index(['BOROUGH_3', 'BOROUGH_2', 'BOROUGH_5', 'NEIGHBORHOOD_OTHER',\n",
+            "       'NEIGHBORHOOD_FLUSHING-NORTH', 'NEIGHBORHOOD_FOREST HILLS', 'BLOCK',\n",
+            "       'BUILDING_CLASS_AT_PRESENT_A5', 'BUILDING_CLASS_AT_PRESENT_A3',\n",
+            "       'ZIP_CODE', 'COMMERCIAL_UNITS', 'TOTAL_UNITS', 'GROSS_SQUARE_FEET',\n",
+            "       'BUILDING_CLASS_AT_TIME_OF_SALE_A5',\n",
+            "       'BUILDING_CLASS_AT_TIME_OF_SALE_A3'],\n",
+            "      dtype='object') 161734.69507808262\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7AoxLXQ40s2d",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
