correct module 3 assignment

--- a/module3-ridge-regression/GJW_assignment_regression_classification_3.ipynb
+++ b/module3-ridge-regression/GJW_assignment_regression_classification_3.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "GJW_assignment_regression_classification_3.ipynb",
+      "name": "Copy of assignment_regression_classification_3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -40,7 +40,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "VZVa2QMoVmVc",
+        "id": "N9OWw-aATQN-",
         "colab_type": "text"
       },
       "source": [
@@ -95,6 +95,19 @@
         "- [ ] Read [_An Introduction to Statistical Learning_](http://faculty.marshall.usc.edu/gareth-james/ISL/ISLR%20Seventh%20Printing.pdf), Chapters 1-3, for more math & theory, but in an accessible, readable way.\n",
         "- [ ] Try [scikit-learn pipelines](https://scikit-learn.org/stable/modules/compose.html)."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b--L2qvuVBBm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -157,7 +170,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "g1IbIzFEVmVr",
+        "id": "6mROG5qGTQOj",
         "colab_type": "code",
         "colab": {}
       },
@@ -172,7 +185,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jgc90W4xVmVv",
+        "id": "bXCVQEf0TQOu",
         "colab_type": "code",
         "colab": {}
       },
@@ -190,9 +203,208 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "T2izT0_FTpWb",
+        "colab_type": "text"
+      },
+      "source": [
+        "#  Use a subset of the data where `BUILDING_CLASS_CATEGORY` == `'01 ONE FAMILY DWELLINGS'` \n",
+        "#  and the sale price was more than 100 thousand and less than 2 million."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "OBdYyZobVmV0",
+        "id": "7bycHYByTQOz",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#  Use a subset of the data where `BUILDING_CLASS_CATEGORY` == `'01 ONE FAMILY DWELLINGS'` \n",
+        "#  and the sale price was more than 100 thousand and less than 2 million."
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yMhko3Q8TveK",
+        "colab_type": "text"
+      },
+      "source": [
+        "#  Use a subset of the data where `BUILDING_CLASS_CATEGORY` == `'01 ONE FAMILY DWELLINGS'` \n",
+        "#  and the sale price was more than 100 thousand and less than 2 million."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fAfpKW2BU7xd",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "atAImCw2U8e1",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Do train/test split. Use data from January — March 2019 to train. Use data from April 2019 to test."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6_LUaMkoU9di",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1cQouOfbU-bx",
+        "colab_type": "text"
+      },
+      "source": [
+        "Do one-hot encoding of categorical features."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yqGifttMVEdU",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JdvDHF0zVFgn",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Do feature selection with SelectKBest."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bYL3BdJlVLPG",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ll2xu2L7VLdJ",
+        "colab_type": "text"
+      },
+      "source": [
+        " # Do feature scaling. Use the scaler's fit_transform method with the train set. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "27ggJAa_VSM-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8ju_mdp8VXV0",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Use the scaler's transform method with the test set.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Sw8Fx5mtVSU1",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "au464X6xVZwN",
+        "colab_type": "text"
+      },
+      "source": [
+        "\n",
+        " # Fit a ridge regression model with multiple features.\n",
+        " \n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1iTW5kbMVSbk",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "esYUtP10VhvM",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Get mean absolute error for the test set."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XrWY2RfoViWH",
         "colab_type": "code",
         "colab": {}
       },
