--- a/module2-regression-2/LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/LS_DS_212_assignment.ipynb
@@ -1,145 +1,327 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Lambda School Data Science\n",
-    "\n",
-    "*Unit 2, Sprint 1, Module 2*\n",
-    "\n",
-    "---"
-   ]
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "Copy of assignment_regression_classification_2.ipynb",
+      "provenance": [],
+      "collapsed_sections": [],
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.3"
+    }
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "7IXUfiQ2UKj6"
-   },
-   "source": [
-    "# Regression 2\n",
-    "\n",
-    "## Assignment\n",
-    "\n",
-    "You'll continue to **predict how much it costs to rent an apartment in NYC,** using the dataset from renthop.com.\n",
-    "\n",
-    "- [ ] Do train/test split. Use data from April & May 2016 to train. Use data from June 2016 to test.\n",
-    "- [ ] Engineer at least two new features. (See below for explanation & ideas.)\n",
-    "- [ ] Fit a linear regression model with at least two features.\n",
-    "- [ ] Get the model's coefficients and intercept.\n",
-    "- [ ] Get regression metrics RMSE, MAE, and $R^2$, for both the train and test data.\n",
-    "- [ ] What's the best test MAE you can get? Share your score and features used with your cohort on Slack!\n",
-    "- [ ] As always, commit your notebook to your fork of the GitHub repo.\n",
-    "\n",
-    "\n",
-    "#### [Feature Engineering](https://en.wikipedia.org/wiki/Feature_engineering)\n",
-    "\n",
-    "> \"Some machine learning projects succeed and some fail. What makes the difference? Easily the most important factor is the features used.\" — Pedro Domingos, [\"A Few Useful Things to Know about Machine Learning\"](https://homes.cs.washington.edu/~pedrod/papers/cacm12.pdf)\n",
-    "\n",
-    "> \"Coming up with features is difficult, time-consuming, requires expert knowledge. 'Applied machine learning' is basically feature engineering.\" — Andrew Ng, [Machine Learning and AI via Brain simulations](https://forum.stanford.edu/events/2011/2011slides/plenary/2011plenaryNg.pdf) \n",
-    "\n",
-    "> Feature engineering is the process of using domain knowledge of the data to create features that make machine learning algorithms work. \n",
-    "\n",
-    "#### Feature Ideas\n",
-    "- Does the apartment have a description?\n",
-    "- How long is the description?\n",
-    "- How many total perks does each apartment have?\n",
-    "- Are cats _or_ dogs allowed?\n",
-    "- Are cats _and_ dogs allowed?\n",
-    "- Total number of rooms (beds + baths)\n",
-    "- Ratio of beds to baths\n",
-    "- What's the neighborhood, based on address or latitude & longitude?\n",
-    "\n",
-    "## Stretch Goals\n",
-    "- [ ] If you want more math, skim [_An Introduction to Statistical Learning_](http://faculty.marshall.usc.edu/gareth-james/ISL/ISLR%20Seventh%20Printing.pdf),  Chapter 3.1, Simple Linear Regression, & Chapter 3.2, Multiple Linear Regression\n",
-    "- [ ] If you want more introduction, watch [Brandon Foltz, Statistics 101: Simple Linear Regression](https://www.youtube.com/watch?v=ZkjP5RJLQF4)\n",
-    "(20 minutes, over 1 million views)\n",
-    "- [ ] Add your own stretch goal(s) !"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "o9eSnDYhUGD7"
-   },
-   "outputs": [],
-   "source": [
-    "%%capture\n",
-    "import sys\n",
-    "\n",
-    "# If you're on Colab:\n",
-    "if 'google.colab' in sys.modules:\n",
-    "    DATA_PATH = 'https://raw.githubusercontent.com/LambdaSchool/DS-Unit-2-Applied-Modeling/master/data/'\n",
-    "    !pip install category_encoders==2.*\n",
-    "\n",
-    "# If you're working locally:\n",
-    "else:\n",
-    "    DATA_PATH = '../data/'\n",
-    "    \n",
-    "# Ignore this Numpy warning when using Plotly Express:\n",
-    "# FutureWarning: Method .ptp is deprecated and will be removed in a future version. Use numpy.ptp instead.\n",
-    "import warnings\n",
-    "warnings.filterwarnings(action='ignore', category=FutureWarning, module='numpy')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "cvrw-T3bZOuW"
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
-    "# Read New York City apartment rental listing data\n",
-    "df = pd.read_csv(DATA_PATH+'apartments/renthop-nyc.csv')\n",
-    "assert df.shape == (49352, 34)\n",
-    "\n",
-    "# Remove the most extreme 1% prices,\n",
-    "# the most extreme .1% latitudes, &\n",
-    "# the most extreme .1% longitudes\n",
-    "df = df[(df['price'] >= np.percentile(df['price'], 0.5)) & \n",
-    "        (df['price'] <= np.percentile(df['price'], 99.5)) & \n",
-    "        (df['latitude'] >= np.percentile(df['latitude'], 0.05)) & \n",
-    "        (df['latitude'] < np.percentile(df['latitude'], 99.95)) &\n",
-    "        (df['longitude'] >= np.percentile(df['longitude'], 0.05)) & \n",
-    "        (df['longitude'] <= np.percentile(df['longitude'], 99.95))]"
-   ]
-  }
- ],
- "metadata": {
-  "colab": {
-   "collapsed_sections": [],
-   "name": "assignment_regression_classification_2.ipynb",
-   "provenance": [],
-   "version": "0.3.2"
-  },
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 1
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/DavidVollendroff/DS-Unit-2-Linear-Models/blob/master/module2-regression-2/LS_DS_212_assignment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5rRKpdCfuSjj",
+        "colab_type": "text"
+      },
+      "source": [
+        "Lambda School Data Science\n",
+        "\n",
+        "*Unit 2, Sprint 1, Module 2*\n",
+        "\n",
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "7IXUfiQ2UKj6"
+      },
+      "source": [
+        "# Regression 2\n",
+        "\n",
+        "## Assignment\n",
+        "\n",
+        "You'll continue to **predict how much it costs to rent an apartment in NYC,** using the dataset from renthop.com.\n",
+        "\n",
+        "- [ ] Do train/test split. Use data from April & May 2016 to train. Use data from June 2016 to test.\n",
+        "- [ ] Engineer at least two new features. (See below for explanation & ideas.)\n",
+        "- [ ] Fit a linear regression model with at least two features.\n",
+        "- [ ] Get the model's coefficients and intercept.\n",
+        "- [ ] Get regression metrics RMSE, MAE, and $R^2$, for both the train and test data.\n",
+        "- [ ] What's the best test MAE you can get? Share your score and features used with your cohort on Slack!\n",
+        "- [ ] As always, commit your notebook to your fork of the GitHub repo.\n",
+        "\n",
+        "\n",
+        "#### [Feature Engineering](https://en.wikipedia.org/wiki/Feature_engineering)\n",
+        "\n",
+        "> \"Some machine learning projects succeed and some fail. What makes the difference? Easily the most important factor is the features used.\" — Pedro Domingos, [\"A Few Useful Things to Know about Machine Learning\"](https://homes.cs.washington.edu/~pedrod/papers/cacm12.pdf)\n",
+        "\n",
+        "> \"Coming up with features is difficult, time-consuming, requires expert knowledge. 'Applied machine learning' is basically feature engineering.\" — Andrew Ng, [Machine Learning and AI via Brain simulations](https://forum.stanford.edu/events/2011/2011slides/plenary/2011plenaryNg.pdf) \n",
+        "\n",
+        "> Feature engineering is the process of using domain knowledge of the data to create features that make machine learning algorithms work. \n",
+        "\n",
+        "#### Feature Ideas\n",
+        "- Does the apartment have a description?\n",
+        "- How long is the description?\n",
+        "- How many total perks does each apartment have?\n",
+        "- Are cats _or_ dogs allowed?\n",
+        "- Are cats _and_ dogs allowed?\n",
+        "- Total number of rooms (beds + baths)\n",
+        "- Ratio of beds to baths\n",
+        "- What's the neighborhood, based on address or latitude & longitude?\n",
+        "\n",
+        "## Stretch Goals\n",
+        "- [ ] If you want more math, skim [_An Introduction to Statistical Learning_](http://faculty.marshall.usc.edu/gareth-james/ISL/ISLR%20Seventh%20Printing.pdf),  Chapter 3.1, Simple Linear Regression, & Chapter 3.2, Multiple Linear Regression\n",
+        "- [ ] If you want more introduction, watch [Brandon Foltz, Statistics 101: Simple Linear Regression](https://www.youtube.com/watch?v=ZkjP5RJLQF4)\n",
+        "(20 minutes, over 1 million views)\n",
+        "- [ ] Add your own stretch goal(s) !"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "o9eSnDYhUGD7",
+        "colab": {}
+      },
+      "source": [
+        "%%capture\n",
+        "import sys\n",
+        "\n",
+        "# If you're on Colab:\n",
+        "if 'google.colab' in sys.modules:\n",
+        "    DATA_PATH = 'https://raw.githubusercontent.com/LambdaSchool/DS-Unit-2-Applied-Modeling/master/data/'\n",
+        "    !pip install category_encoders==2.*\n",
+        "\n",
+        "# If you're working locally:\n",
+        "else:\n",
+        "    DATA_PATH = '../data/'\n",
+        "    \n",
+        "# Ignore this Numpy warning when using Plotly Express:\n",
+        "# FutureWarning: Method .ptp is deprecated and will be removed in a future version. Use numpy.ptp instead.\n",
+        "import warnings\n",
+        "warnings.filterwarnings(action='ignore', category=FutureWarning, module='numpy')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "cvrw-T3bZOuW",
+        "colab": {}
+      },
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Read New York City apartment rental listing data\n",
+        "df = pd.read_csv(DATA_PATH+'apartments/renthop-nyc.csv')\n",
+        "assert df.shape == (49352, 34)\n",
+        "\n",
+        "# Remove the most extreme 1% prices,\n",
+        "# the most extreme .1% latitudes, &\n",
+        "# the most extreme .1% longitudes\n",
+        "df = df[(df['price'] >= np.percentile(df['price'], 0.5)) & \n",
+        "        (df['price'] <= np.percentile(df['price'], 99.5)) & \n",
+        "        (df['latitude'] >= np.percentile(df['latitude'], 0.05)) & \n",
+        "        (df['latitude'] < np.percentile(df['latitude'], 99.95)) &\n",
+        "        (df['longitude'] >= np.percentile(df['longitude'], 0.05)) & \n",
+        "        (df['longitude'] <= np.percentile(df['longitude'], 99.95))]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "O5DmcqpowF9Q",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Engineer at least two new features.\n",
+        "df['bed_bath_ratio']  = (df['bedrooms'] / df['bathrooms'])\n",
+        "df['pet_friendly'] = (df['cats_allowed'] == 1) & (df['dogs_allowed'] == 1)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ymm8a6c-1sri",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Do train/test split. Use data from April & May 2016 to train. Use data from June 2016 to test.\n",
+        "\n",
+        "# string to datetime conversion\n",
+        "df['created'] = pd.to_datetime(df['created'], infer_datetime_format=False)\n",
+        "\n",
+        "# function to extract month\n",
+        "def month(date_time):\n",
+        "  return date_time.month\n",
+        "\n",
+        "df['created'] = df['created'].apply(month)\n",
+        "\n",
+        "df = df[(df['bathrooms'] != 0)] # removing 0 bathroom condos\n",
+        "\n",
+        "df.pet_friendly = df.pet_friendly.astype(int) # casting booleans to ints\n",
+        "\n",
+        "train = df[(df['created'] < 6)] # split by month for training\n",
+        "\n",
+        "test = df[(df['created'] == 6)] # split by month for testing"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ROqT0PtByoR-",
+        "colab_type": "code",
+        "outputId": "a9bd8bec-63f3-4c8f-e95c-7ec0b26dac75",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "# Fit a linear regression model with at least two features.\n",
+        "\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "\n",
+        "model = LinearRegression()\n",
+        "\n",
+        "features = ['bathrooms', 'bedrooms', 'bed_bath_ratio', 'pet_friendly']\n",
+        "labels = 'price'\n",
+        "\n",
+        "model.fit(train[features], train[labels])"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b3RCu27Z7CdR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Get the model's coefficients and intercept.\n",
+        "coef = model.coef_\n",
+        "intercept = model.intercept_"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Bxs8DoOo8qU_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Get regression metrics RMSE, MAE, and  R2 , for both the train and test data.\n",
+        "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
+        "\n",
+        "train_pred = model.predict(train[features])\n",
+        "test_pred = model.predict(test[features])\n",
+        "train_labels = train[labels]\n",
+        "test_labels = test[labels]\n",
+        "\n",
+        "train_mae = mean_absolute_error(train_labels, train_pred)\n",
+        "train_mse = mean_squared_error(train_labels, train_pred)\n",
+        "train_r2 = r2_score(train_labels, train_pred)\n",
+        "\n",
+        "test_mae = mean_absolute_error(test_labels, test_pred)\n",
+        "test_mse = mean_squared_error(test_labels, test_pred)\n",
+        "test_r2 = r2_score(test_labels, test_pred)\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a_kMnXMm_9Hm",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 89
+        },
+        "outputId": "8958cdb4-0198-41eb-83f0-510bf37010a7"
+      },
+      "source": [
+        "string = '{} errors:\\nmae = {}, mse = {}, r_score = {}'\n",
+        "print(string.format('Training', train_mae, train_mse, train_r2))\n",
+        "print(string.format('Testing', test_mae, test_mse, test_r2))"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Training errors:\n",
+            "mae = 796.5252722612234, mse = 1441703.9005300913, r_score = 0.5346644891073173\n",
+            "Testing errors:\n",
+            "mae = 806.456452209694, mse = 1416010.5573027518, r_score = 0.5445265842637952\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "83-Ph0zhCCk9",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    }
+  ]
 }
