--- a/module1-regression-1/LS_DS_211_assignment.ipynb
+++ b/module1-regression-1/LS_DS_211_assignment.ipynb
@@ -1539,8 +1539,8 @@
         "\n",
         "features = ['bedrooms','bathrooms','doorman','laundry_in_unit','dining_room', 'longitude']\n",
         "target='price'\n",
-        "X_test=df[features]\n",
-        "y_test=df[target]\n"
+        "X_train=df[features]\n",
+        "y_train=df[target]\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1554,13 +1554,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "7b1428ce-dce8-46f0-a5b3-2253d53143e5"
+        "outputId": "588ec88b-33fc-45e2-8b84-e84cde8e7042"
       },
       "source": [
         "#4. fit model \n",
         "model1.fit(X_train, y_train)"
       ],
-      "execution_count": 153,
+      "execution_count": 157,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1572,7 +1572,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 153
+          "execution_count": 157
         }
       ]
     },
@@ -1585,24 +1585,24 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "151751f7-306b-46d1-e4a9-5533ca4af847"
+        "outputId": "569fa018-2b21-4066-b617-729b5350d306"
       },
       "source": [
         "model1.intercept_"
       ],
-      "execution_count": 151,
+      "execution_count": 158,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "2267.9741491780505"
+              "-942365.2529907026"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 151
+          "execution_count": 158
         }
       ]
     },
@@ -1613,26 +1613,27 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 51
         },
-        "outputId": "22b8da9a-7ddf-407e-8a16-b1c416357357"
+        "outputId": "91094024-72ac-4ad5-ac97-caf3776d6f70"
       },
       "source": [
         "model1.coef_"
       ],
-      "execution_count": 152,
+      "execution_count": 159,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([853.25416753])"
+              "array([   444.40314005,   1853.19572169,    490.79781127,    318.46929104,\n",
+              "          147.71220275, -12744.62183466])"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 152
+          "execution_count": 159
         }
       ]
     },
@@ -1643,33 +1644,32 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 34
         },
-        "outputId": "a9f79bb8-5b39-4524-d5e9-8a8524df163b"
+        "outputId": "078b249b-1f76-4b3b-e3df-2cb6e4e22609"
       },
       "source": [
         "#5.predict \n",
         "\n",
-        "new_data = [3,2,1,0,1,-73.9493]\n",
+        "new_data = [[3,2,1,0,1,-73.9493]]\n",
         "X_test = pd.DataFrame(new_data)\n",
         "X_test\n",
         "y_pred=model1.predict(X_test)\n",
         "y_pred"
       ],
-      "execution_count": 155,
+      "execution_count": 166,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([  4827.73665176,   3974.48248423,   3121.22831671,   2267.97414918,\n",
-              "         3121.22831671, -60829.57426156])"
+              "array([5768.72132486])"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 155
+          "execution_count": 166
         }
       ]
     },
@@ -1794,6 +1794,78 @@
       "cell_type": "code",
       "metadata": {
         "id": "zsHv7Hd184ZB",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 80
+        },
+        "outputId": "387acc99-832e-4efa-c39f-fad6e2649cf4"
+      },
+      "source": [
+        "pd.DataFrame([[3,2,1,0,1,-73.9493]]) #Remember syntax to input data frame into the multiple variables "
+      ],
+      "execution_count": 165,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "      <th>1</th>\n",
+              "      <th>2</th>\n",
+              "      <th>3</th>\n",
+              "      <th>4</th>\n",
+              "      <th>5</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>3</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>-73.9493</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   0  1  2  3  4        5\n",
+              "0  3  2  1  0  1 -73.9493"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 165
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qg7oYMufDD99",
         "colab_type": "code",
         "colab": {}
       },
